# docuscope-ca-desktop

./: .gitignore  .templatesyncignore  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_BUILD.md  DESKTOP_INTEGRATION.md  Dockerfile  README.md  docker-compose.yml  entrypoint.py  entrypoint.spec  pyproject.toml  requirements-deploy.txt  requirements.txt
.github/workflows/: build-python.yml  build-tauri.yml  template-sync.yml  test-desktop.yml  test.yml  update-readme-links.yml
.streamlit/: secrets.toml  secrets.toml.template
hooks/: hook-google.cloud.firestore.py  hook-lingua.py  hook-pandasai.py  hook-pandasai_openai.py  hook-pydantic_core.py  hook-pydantic_settings.py  hook-webapp.py
scripts/: update-readme-links.sh
tauri/: copy-splash.js  copy-splash.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tauri/src/: main.ts  splash-styles.css  splashscreen.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
tauri/src-tauri/src/: lib.rs
tests/: conftest.py  test_config.py  test_desktop_build.py
tests/integration/: direct_sqlite_test.py  full_session_persistence_test.py  simple_session_test.py  sqlite_integration_test.py  test_corpus_pipeline.py
tests/performance/: test_performance.py
tests/streamlit/: test_ui_workflows.py
tests/unit/: test_docuscope_tagsets.py
tests/unit/ai/: __init__.py  test_llm_integration.py
tests/unit/analysis/: test_data_validation.py
tests/unit/auth/: __init__.py  test_authorization.py
tests/unit/config/: __init__.py  test_configuration.py
tests/unit/corpus/: test_data_manager.py
tests/unit/error_handling/: test_error_handling.py
tests/unit/monitoring/: __init__.py  test_health_checks.py
tests/unit/plotting/: test_visualization.py
tests/unit/processing/: test_corpus_processing.py  test_file_handling.py
tests/unit/session/: test_session_core.py
webapp/: __init__.py  index.py  menu.py
webapp/config/: config_utils.py  core.py  options.toml  runtime_config.py  static_config.py  unified.py
webapp/pages/: 10_single_document.py  11_assisted_plotting.py  12_assisted_analysis.py  13_download_corpus.py  14_download_tagged_files.py  1_load_corpus.py  2_token_frequencies.py  3_tag_frequencies.py  4_ngrams.py  5_compare_corpora.py  6_compare_corpus_parts.py  7_collocations.py  8_kwic.py  98_user_management.py  99_health_monitor.py  9_advanced_plotting.py
webapp/utilities/: __init__.py
webapp/utilities/ai/: __init__.py  code_execution.py  enterprise_circuit_breaker.py  enterprise_integration.py  enterprise_router.py  llm_core.py  pandabot.py  plotbot.py  shared.py
webapp/utilities/analysis/: __init__.py  corpus_generators.py  corpus_loading.py  data_validation.py  grouped_analysis.py  statistical_analysis.py  table_generators.py
webapp/utilities/auth/: __init__.py  manage.py  user_authorization.py
webapp/utilities/common/: __init__.py  common.py  common_imports.py  common_logging.py  document_utils.py
webapp/utilities/configuration/: __init__.py  config_manager.py  logging_config.py
webapp/utilities/core/: __init__.py  error_handling.py  integration.py
webapp/utilities/corpus/: __init__.py  compatibility.py  data_manager.py
webapp/utilities/error_handling/: __init__.py  enhanced.py
webapp/utilities/exports/: __init__.py  (+2 more)
(+46 files in other folders)
