[project]
name = "docuscope-ca-online"
version = "0.4.0"
description = "An online version of the Docuscope CA tool for analyzing text."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["nlp", "language"]
authors = [
    { name = "David Brown", email = "dwb2@andrew.cmu.edu" }
]
maintainers = [
    { name = "David Brown", email = "dwb2@andrew.cmu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Authlib==1.5.2",
    "docuscospacy==0.3.6",
    "google-cloud-firestore==2.20.2",
    "lingua-language-detector==2.0.2",
    "loguru==0.7.3",
    "kaleido==0.2.1",
    "matplotlib==3.7.5",
    "numpy==1.26.4",
    "openai==1.66.5",
    "pandas==2.2.3",
    "pandasai==3.0.0b18",
    "pandasai-openai==0.1.5",
    "plotly==6.0.1",
    "polars==1.31.0",
    "psutil==7.0.0",
    "python-docx==1.1.2",
    "RestrictedPython==8.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "spacy==3.8.7",
    "streamlit==1.45.1",
    "Unidecode==1.3.8",
    "XlsxWriter==3.2.2",
]

[project.urls]
Documentation = "https://browndw.github.io/docuscope-ca-online/"
Homepage = "https://github.com/browndw/docuscope-ca-online"

[build-system]
requires = ["setuptools>=45", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "streamlit: marks tests as streamlit UI tests",
    "slow: marks tests as slow running",
    "ai: marks tests that require AI/LLM access"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0"
]
